Bug 79256 - FILESAVE: Corruption: Line Style with Long Dashes and Dot is getting corrupted after RT
Summary: FILESAVE: Corruption: Line Style with Long Dashes and Dot is getting corrupte...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Dinesh
URL:
Whiteboard: BSA target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-26 10:38 UTC by Dinesh
Modified: 2014-06-06 09:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
File contains Long Dashes and Dot (16.81 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-26 10:38 UTC, Dinesh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh 2014-05-26 10:38:08 UTC
Created attachment 99858 [details]
File contains Long Dashes and Dot

Problem description: 
Corruption issue because of custom dash tag which has two attributes:
d (Dash Length) and sp (Space Length) Dash Length possible values are beyond the specified limit in RT file.

Steps to reproduce:
1. Open the file in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open saved file in MS Office

Current behavior:
File is getting corrupt after RT

Expected behavior:
File should open without any error
              
Operating System: All
Version: 4.4.0.0.alpha0+ Master
Comment 1 Jorendc 2014-05-26 17:31:22 UTC
I'm sorry, looks already assigned - ASSIGNED
Comment 2 Commit Notification 2014-06-06 08:25:46 UTC
Dinesh Patil committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80ef7a645a8118976a4366135faa41bceda423be

fdo#79256 Line Style with Long Dashes and dots is getting corrupt after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.