fdo#79256 Line Style with Long Dashes and dots is getting corrupt after RT

Description:
In RT file the dash length (d) is going out of range,
as after RT the dashing scheme changes to custom dash
which was causing the corruption. Changed code at export,
which will divide the DashLen, DotLen and Distance by
base line width.

Change-Id: I0e644b5a2b692a9e717026a14d1f0058199f53b1