oox/source/export/drawingml.cxx
@@ -628,6 +628,12 @@ void DrawingML::WriteOutline( Reference< XPropertySet > rXPropSet )
         // line style is a dash and it was not set by the shape style
         // TODO: the XML_d and XML_sp values seem insane
         mpFS->startElementNS( XML_a, XML_custDash, FSEND );
+
+        sal_Int32 nBaseLineWidth = ::std::max< sal_Int32 >( nLineWidth, 35 );
+        aLineDash.DotLen = aLineDash.DotLen / nBaseLineWidth;
+        aLineDash.DashLen = aLineDash.DashLen / nBaseLineWidth;
+        aLineDash.Distance = aLineDash.Distance / nBaseLineWidth;
+
         int i;
         for( i = 0; i < aLineDash.Dots; i ++ )
             mpFS->singleElementNS( XML_a, XML_ds,
